# ChangeLog for media-libs/portaudio
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/portaudio/ChangeLog,v 1.48 2007/10/15 14:36:45 corsair Exp $

  15 Oct 2007; Markus Rothe <corsair@gentoo.org> portaudio-18.1-r6.ebuild:
  Stable on ppc64

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  portaudio-18.1-r6.ebuild:
  ppc. stable

  06 Aug 2007; Roy Marples <uberlord@gentoo.org> portaudio-18.1-r6.ebuild:
  Keyworded ~x86-fbsd, #156699.

  26 Jul 2007; Raúl Porcel <armin76@gentoo.org> portaudio-18.1-r6.ebuild:
  alpha/ia64/x86 stable

*portaudio-19_pre070707 (07 Jul 2007)

  07 Jul 2007; Alexis Ballier <aballier@gentoo.org>
  +portaudio-19_pre070707.ebuild:
  Version bump

  24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  portaudio-18.1-r6.ebuild:
  Stable on sparc

  12 Apr 2007; Stefan Schweizer <genstef@gentoo.org>
  portaudio-19_pre061121.ebuild:
  Add ~x86

*portaudio-19_pre061121 (30 Mar 2007)

  30 Mar 2007; Alexis Ballier <aballier@gentoo.org>
  +portaudio-19_pre061121.ebuild:
  Add v19, bug #94354, p.masked and will need rekeywording as this has major
  changes

  23 Feb 2007; Guy Martin <gmsoft@gentoo.org>
  files/portaudio-18.1-r5-Makefile.linux, files/portaudio-18.1-r6-Makefile,
  portaudio-18.1-r6.ebuild:
  Fixed linking on hppa. The lib needs to be linked using gcc and not ld.

  03 Dec 2006; Jeroen Roovers <jer@gentoo.org> portaudio-18.1-r5.ebuild:
  Stable for HPPA (bug #154204).

  03 Dec 2006; Markus Rothe <corsair@gentoo.org> portaudio-18.1-r5.ebuild:
  Stable on ppc64

*portaudio-18.1-r6 (30 Nov 2006)

  30 Nov 2006; Alexis Ballier <aballier@gentoo.org>
  +files/portaudio-18.1-r6-Makefile, +portaudio-18.1-r6.ebuild:
  Rev bump fixing bsd build, thanks to Timothy Redaelli <drizzt@gentoo.org>

  23 Nov 2006; <blubb@gentoo.org> portaudio-18.1-r5.ebuild:
  stable on amd64

  13 Nov 2006; Joseph Jezak <josejx@gentoo.org> portaudio-18.1-r5.ebuild: