@@ -3,10 +3,12 @@ AUX portaudio-18.1-Makefile.macos 1584 RMD160 2ffbe7333a42c5518fdbbc5aaf3efc9b08
 AUX portaudio-18.1-r6-Makefile 1643 RMD160 1381535bd96c596712439bacb00b15fbf24ef954 SHA1 f2b563115fbabd25d9168b16c18b05732b65d892 SHA256 112bca3712ab89435dea41eb4867aec8252ad4704433522bf14816ab01b0872f
 DIST pa_stable_v19_061121.tar.gz 1090897 RMD160 f7b6a83ad6b120b9c3b7736b86231e88d709ee7f SHA1 798fc900251e2df423ba9e60b832ca76f85c3ad0 SHA256 98d5ef0b0db66cfc04d70505cf60847ec6dc0814a6ebcb4be80873beaa22c48b
 DIST pa_stable_v19_070707.tar.gz 1101365 RMD160 9f33443cc520fe1fc0a7089f46792370c43740e1 SHA1 353cf394ed1f2d8096ec902546820a4c0ad2852f SHA256 c67d948b7dba77fc1c71b16bae86ef89483009bbc7d9decaa4987c4aac13489f
+DIST pa_stable_v19_20071207.tar.gz 1113282 RMD160 5185bd85bd4bc75dddb3fa56f172a346bdeea0c7 SHA1 3841453bb7be672a15b6b632ade6f225eb0a4efc SHA256 06a17727d56d382a69036de2ed9aee9a15cac0329b995b8cfcd69b357f47bf2b
 DIST portaudio_v18_1.zip 550130 RMD160 3352d70225a81aae80eefabc3701658da0c750c2 SHA1 a460ac5484137d77df17a95ce844ff7f178305b1 SHA256 9da7f1ba0b8029f934d5a8300199e29095127e6abfa03dbb3c1ce40e10751f0a
 EBUILD portaudio-18.1-r5.ebuild 1063 RMD160 54789f9b4e06d6d46ae5e1626af7ba825ba67848 SHA1 73a4d8f39f162f9aba39f265e10649069e0bbb06 SHA256 7fb8d9431296ccad9ec5c9a6cb77f53ffe5a21d18b6cdddec01d4f52f436bb39
 EBUILD portaudio-18.1-r6.ebuild 1265 RMD160 2891039cecee043e4a54d24f1ca0da935f3457d2 SHA1 fa0fcdfa7329deb0f050a41f471d7164578610c2 SHA256 11ada0d8b92ac9dca6f49d6deea8a790b144b0fd933c433c35257ab0ea4dc751
 EBUILD portaudio-19_pre061121.ebuild 979 RMD160 98d0c30e8c972142032cad3456381378a7998c59 SHA1 1b4e8258120877368f13b3d8934b37ae93a7d53d SHA256 3f4162558a7017e4f5e588232874431a24e1921af0d635fa66fdf48c465422eb
 EBUILD portaudio-19_pre070707.ebuild 1091 RMD160 6e00db2b8d4b0e461fbeb2bd740d77d7adf239a1 SHA1 c080dcde7446e52074a9a8a1aa31b1caa9f9318d SHA256 ab240df20483c53fe1d86c244ca6ed806591cf4dc4d4cfeac45a4f3551a74adb
-MISC ChangeLog 6158 RMD160 c65f41a37d26e24ee8b1fef251c89c05b8095434 SHA1 c068e8cbd7508a621b43619cb90ba5f5749dd064 SHA256 b1df6f1880ac07653861ac29db5920cd900631dee73e552b5332102a59283aff
+EBUILD portaudio-19_pre20071207.ebuild 1123 RMD160 db4f3e2ea35afe1eb7c293fa84cc343d12e1c581 SHA1 20d7dcfc79e6e23f1e6f1fe17754082a2008ea07 SHA256 69feae7ed61372ce174699ca876797fe3318af14dbd25bd94b3d40c3ad970fde
+MISC ChangeLog 6325 RMD160 a65583e418b1510a4494071fbcb2e2eb8a24e056 SHA1 d41f605070347d54d2d4cb6094eb883a605e1aaa SHA256 a3b0afd746d9f158801d280a4a04103d165df0e1381f68d67dfaea8b6524007e
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
