@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/portaudio
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/portaudio/ChangeLog,v 1.48 2007/10/15 14:36:45 corsair Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/portaudio/ChangeLog,v 1.49 2008/01/12 18:16:56 aballier Exp $
+
+*portaudio-19_pre20071207 (12 Jan 2008)
+
+  12 Jan 2008; Alexis Ballier <aballier@gentoo.org>
+  +portaudio-19_pre20071207.ebuild:
+  bump a new snapshot from upstream
 
   15 Oct 2007; Markus Rothe <corsair@gentoo.org> portaudio-18.1-r6.ebuild:
   Stable on ppc64
